remake: new template.
