# project/backend/pkg/docs/swagger.json
@@ -295,6 +295,13 @@
                         "required": true
                     },
                     {
+                        "type": "integer",
+                        "description": "Address ID.",
+                        "name": "address",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "Json request.",
                         "name": "JSON",
                         "in": "body",
@@ -302,13 +309,6 @@
                         "schema": {
                             "$ref": "#/definitions/models.AddressUpdate"
                         }
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Address ID.",
-                        "name": "address",
-                        "in": "path",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -333,74 +333,26 @@
                 }
             }
         },
-        "/address/{address}/client/{client}": {
-            "get": {
-                "description": "Get a single address for a single client from your ID's.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "address"
-                ],
-                "summary": "GET",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer token.",
-                        "name": "TOKEN",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Address ID.",
-                        "name": "address",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Client ID.",
-                        "name": "client",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.AddressList"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/models.HTTP"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.HTTP"
-                        }
-                    }
-                }
-            }
-        },
         "/auth": {
             "get": {
-                "description": "Get user ID inside the token (JWT).",
+                "description": "Get property from token (JWT).",
                 "tags": [
                     "auth"
                 ],
-                "summary": "ID",
+                "summary": "PROPERTIES",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Bearer token.",
                         "name": "TOKEN",
                         "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Field\tto\tsearch\tinside\ttoken\t('id' or 'role' only).",
+                        "name": "field",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -499,6 +451,30 @@
                         "name": "TOKEN",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Client name.",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Client document.",
+                        "name": "document",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Client phone.",
+                        "name": "phone",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Client email.",
+                        "name": "email",
+                        "in": "query"
                     },
                     {
                         "type": "boolean",
@@ -646,6 +622,30 @@
                         "name": "TOKEN",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Client name.",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Client document.",
+                        "name": "document",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Client phone.",
+                        "name": "phone",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Client email.",
+                        "name": "email",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -769,6 +769,19 @@
                         "required": true
                     },
                     {
+                        "type": "integer",
+                        "description": "Client ID.",
+                        "name": "client",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Reactivate an inactive client.",
+                        "name": "reactivate",
+                        "in": "query"
+                    },
+                    {
                         "description": "Json request.",
                         "name": "JSON",
                         "in": "body",
@@ -776,13 +789,6 @@
                         "schema": {
                             "$ref": "#/definitions/models.ClientUpdate"
                         }
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Client ID.",
-                        "name": "client",
-                        "in": "path",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -892,10 +898,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.ClientList"
-                            }
+                            "$ref": "#/definitions/models.ClientList"
                         }
                     },
                     "404": {
@@ -915,7 +918,7 @@
         },
         "/order": {
             "get": {
-                "description": "List all Orders.",
+                "description": "List all orders.",
                 "produces": [
                     "application/json"
                 ],
@@ -942,6 +945,12 @@
                             }
                         }
                     },
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -951,7 +960,7 @@
                 }
             },
             "post": {
-                "description": "Create a new order.",
+                "description": "Create a new order.\nSintax of date and time: \"yyyy-mm-dd hh:mm:ss\".",
                 "consumes": [
                     "application/json"
                 ],
@@ -1194,6 +1203,44 @@
                 }
             }
         },
+        "/permission": {
+            "get": {
+                "description": "List all available permission to use.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "permission"
+                ],
+                "summary": "LIST",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token.",
+                        "name": "TOKEN",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.PermissionList"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTP"
+                        }
+                    }
+                }
+            }
+        },
         "/service": {
             "get": {
                 "description": "List all services.",
@@ -1208,9 +1255,15 @@
                     {
                         "type": "string",
                         "description": "Bearer token.",
-                        "name": "Token",
+                        "name": "TOKEN",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Service name.",
+                        "name": "name",
+                        "in": "query"
                     },
                     {
                         "type": "boolean",
@@ -1304,7 +1357,7 @@
                     {
                         "type": "string",
                         "description": "Bearer token.",
-                        "name": "Token",
+                        "name": "TOKEN",
                         "in": "header",
                         "required": true
                     },
@@ -1438,7 +1491,7 @@
                     {
                         "type": "string",
                         "description": "Bearer token.",
-                        "name": "Token",
+                        "name": "TOKEN",
                         "in": "header",
                         "required": true
                     },
@@ -1448,6 +1501,12 @@
                         "name": "service",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Reactivate an inactive service.",
+                        "name": "reactivate",
+                        "in": "query"
                     },
                     {
                         "description": "Json request.",
@@ -1481,6 +1540,44 @@
                 }
             }
         },
+        "/status": {
+            "get": {
+                "description": "List all available status to use.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "status"
+                ],
+                "summary": "LIST",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token.",
+                        "name": "TOKEN",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.StatusList"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTP"
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "get": {
                 "description": "List all users.",
@@ -1495,9 +1592,33 @@
                     {
                         "type": "string",
                         "description": "Bearer token.",
-                        "name": "Token",
+                        "name": "TOKEN",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User name.",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "User username.",
+                        "name": "username",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "User email.",
+                        "name": "email",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "User role.",
+                        "name": "role",
+                        "in": "query"
                     },
                     {
                         "type": "boolean",
@@ -1591,7 +1712,7 @@
                     {
                         "type": "string",
                         "description": "Bearer token.",
-                        "name": "Token",
+                        "name": "TOKEN",
                         "in": "header",
                         "required": true
                     },
@@ -1725,7 +1846,7 @@
                     {
                         "type": "string",
                         "description": "Bearer token.",
-                        "name": "Token",
+                        "name": "TOKEN",
                         "in": "header",
                         "required": true
                     },
@@ -1735,6 +1856,12 @@
                         "name": "user",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Reactivate an inactive user.",
+                        "name": "reactivate",
+                        "in": "query"
                     },
                     {
                         "description": "Json request.",
@@ -1950,6 +2077,7 @@
             "type": "object",
             "required": [
                 "client_id",
+                "date_time",
                 "service_id",
                 "user_id"
             ],
@@ -1957,10 +2085,14 @@
                 "client_id": {
                     "type": "integer"
                 },
+                "date_time": {},
                 "description": {
                     "type": "string"
                 },
                 "service_id": {
+                    "type": "integer"
+                },
+                "state": {
                     "type": "integer"
                 },
                 "user_id": {
@@ -1974,6 +2106,9 @@
                 "client": {
                     "$ref": "#/definitions/models.ClientList"
                 },
+                "date_time": {
+                    "type": "string"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -1982,6 +2117,9 @@
                 },
                 "service": {
                     "$ref": "#/definitions/models.ServiceList"
+                },
+                "state": {
+                    "type": "integer"
                 },
                 "user": {
                     "$ref": "#/definitions/models.UserList"
@@ -1994,10 +2132,14 @@
                 "client_id": {
                     "type": "integer"
                 },
+                "date_time": {},
                 "description": {
                     "type": "string"
                 },
                 "service_id": {
+                    "type": "integer"
+                },
+                "state": {
                     "type": "integer"
                 },
                 "user_id": {
@@ -2005,13 +2147,27 @@
                 }
             }
         },
+        "models.PermissionList": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.ServiceCreate": {
             "type": "object",
             "required": [
-                "service"
+                "name"
             ],
             "properties": {
-                "service": {
+                "name": {
                     "type": "string"
                 }
             }
@@ -2022,15 +2178,32 @@
                 "id": {
                     "type": "integer"
                 },
-                "service": {
+                "name": {
                     "type": "string"
                 }
             }
         },
         "models.ServiceUpdate": {
             "type": "object",
+            "required": [
+                "name"
+            ],
             "properties": {
-                "service": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.StatusList": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 }
             }
